--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "flowbite-react": "^0.10.2",
     "gitignore": "^0.7.0",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.4"
   },
   "devDependencies": {
