--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gitignore": "^0.7.0",
     "headlessui": "^0.0.0",
     "heroicons": "^2.2.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
