--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "heroicons": "^2.2.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.4"
