--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^7.1.4"
   },
   "devDependencies": {
