--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "ag-grid-community": "~33.0.4",
+    "ag-grid-react": "~33.0.4",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
     "flowbite-react": "^0.10.2",
     "gitignore": "^0.7.0",
@@ -20,6 +23,7 @@
     "heroicons": "^2.2.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
