--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "flowbite-react": "^0.10.2",
     "gitignore": "^0.7.0",
     "headlessui": "^0.0.0",
@@ -28,7 +29,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.0",
-    "react-router-dom": "^7.1.4"
+    "react-router-dom": "^7.1.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
