--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.1.4",
     "xlsx": "^0.18.5"
   },
